blur fix on ios

--- a/src/styles/components/AccessPopup.scss
+++ b/src/styles/components/AccessPopup.scss
@@ -24,6 +24,7 @@
     bottom: 0;
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     transition: all 0.2s;
   }
   .popup-card {
